nodeapp.yaml
apiVersion : v1
kind: Pod
metadata:
  name: node
spec:
  containers:
    - name : nodeapp
      image: freedbka/nodeapp:latest
      ports:
        - containerPort: 3000
