ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: nodeapp.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapp
                port:
                  number: 3000
